--- a/AWSKinesis/AWS_Kinesis_POC.csproj
+++ b/AWSKinesis/AWS_Kinesis_POC.csproj
@@ -43,8 +43,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AWSSDK.CloudWatch, Version=3.3.0.0, Culture=neutral, PublicKeyToken=885c28607f98e604, processorArchitecture=MSIL">
+      <HintPath>..\packages\AWSSDK.CloudWatch.3.7.2.5\lib\net45\AWSSDK.CloudWatch.dll</HintPath>
+    </Reference>
     <Reference Include="AWSSDK.Core, Version=3.3.0.0, Culture=neutral, PublicKeyToken=885c28607f98e604, processorArchitecture=MSIL">
-      <HintPath>..\packages\AWSSDK.Core.3.7.0.35\lib\net45\AWSSDK.Core.dll</HintPath>
+      <HintPath>..\packages\AWSSDK.Core.3.7.2.1\lib\net45\AWSSDK.Core.dll</HintPath>
     </Reference>
     <Reference Include="AWSSDK.KinesisVideo, Version=3.3.0.0, Culture=neutral, PublicKeyToken=885c28607f98e604, processorArchitecture=MSIL">
       <HintPath>..\packages\AWSSDK.KinesisVideo.3.7.0.33\lib\net45\AWSSDK.KinesisVideo.dll</HintPath>
@@ -98,6 +101,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -110,6 +114,7 @@
     <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
+    <Analyzer Include="..\packages\AWSSDK.CloudWatch.3.7.2.5\analyzers\dotnet\cs\AWSSDK.CloudWatch.CodeAnalysis.dll" />
     <Analyzer Include="..\packages\AWSSDK.KinesisVideo.3.7.0.33\analyzers\dotnet\cs\AWSSDK.KinesisVideo.CodeAnalysis.dll" />
     <Analyzer Include="..\packages\AWSSDK.KinesisVideoArchivedMedia.3.7.0.33\analyzers\dotnet\cs\AWSSDK.KinesisVideoArchivedMedia.CodeAnalysis.dll" />
     <Analyzer Include="..\packages\AWSSDK.KinesisVideoMedia.3.7.0.33\analyzers\dotnet\cs\AWSSDK.KinesisVideoMedia.CodeAnalysis.dll" />
